# cpp_projects

./: .gitignore  CMakeList_Include.txt  GC++_MACROS.txt  GCC_MACROS.txt  INSTALL_PACKAGES.txt  MSYS2_PACKAGES.txt  README.txt  README_libs.txt  cmake-shared.sh  cmake.sh
check_arrayfire/: CMakeLists.txt  main.cpp
check_assignment/: CMakeLists.txt  main.cpp
check_cublas/: CMakeLists.txt  README_cuda.txt  main1.cpp  main2.cpp  main3.cpp
check_cublas/cuda/: array.cpp  cublas.cpp  cublas.h  cublaserr.cpp  dot_op.cpp  dot_op.h  matrix.cpp  nmf.cpp  nmf.h  vector.cpp
check_cuda/: .gitignore  CMakeLists.txt  README.txt  README_compatibility.txt  README_cuda_lib.txt  README_example.txt  README_moduled_vs_library.txt  READ_memory.txt  TODO.txt  cl_macros.txt  cudacpp.cpp  cudacpp.h  cugraph.h  language.h  main.cpp  main.cu  main2.cu  main3.cu  nvcc-help.txt  nvidia-smi-help.txt  vecadd.cu  vecadd.ptx
check_cuda/include/: language.h
check_cuda/include/cuda_api_wrappers/: api.hpp
check_cuda/include/cuda_wrapper/: copy.hpp  cuda_wrapper.hpp  device.hpp  event.hpp  function.hpp  stream.hpp  symbol.hpp  texture.hpp  thread.hpp  version.hpp
check_cuda/include/cuda_wrapper/memory/device/: allocator.hpp  (+1 more)
check_cuda/include/cudacpp/: cthread.h  cudacpp.h  cudamem.h
check_cuda/src/: common.cpp  common.h  cudacpp.cpp  cudamem.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
check_cuda/src/cudacpp/: cudacpp.cpp  cudamem.cpp
check_cudaexe/: CMakeLists.txt  main.cu  main.cu.cpp.ii  nvcc-help.txt  vectorAdd.cu  vectorAdd.ptx
check_cudart/: CMakeLists.txt  main.cpp
check_cudart/cu/: vecadd.cu  vecadd.ptx
check_dbase/: CMakeLists.txt  main.cpp
check_dbclients/: CMakeLists.txt  REDME_db_access_clients.txt  main.cpp
check_fltk/: CMakeLists.txt  main.cpp
check_gc/: CMakeLists.txt  main.cpp
check_generic/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
check_gui/: CMakeLists.txt  README_gui.txt  main_fltk.cpp  main_nana.cpp  main_wxtk.cpp
check_half/: CMakeLists.txt  README.txt  all_tests.cpp  bfloat16_t.h  float16_t.h  float24.h  floatx.h  ieee754.cpp  ieee754.h  ieee754std.cpp  ieee754std.h  main.cpp  minifloat.h  umHalf.h  umHalf.inl
check_hlsext/: CMakeLists.txt  README_collection.txt  README_containers.txt  README_smart_pointers.txt  README_template_libs.txt  args.properties  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  mainA.cpp
check_ieee754/: CMakeLists.txt  OTHER.txt  TODO.txt  intfloat.h  main.cpp  real_limits.h  real_t.cpp  real_t.h
check_ieee754/tests/: test_ieee754.cpp
check_igraph/: CMakeLists.txt  igraph.cpp  igraph.hpp  igraph_dstruct.cpp  igraph_simple.cpp  main.cpp
check_json/: CMakeLists.txt  main.cpp
check_linalg/: CMakeLists.txt  linalg.h  main.cpp  mat.cpp  refcount.h  vec.cpp
check_linalg/include/stdx/float64/: arith.h  array.h  dot_op.h  matrix_op.h  nmf.h  svd.h  vector_op.h
check_linalg/linalg/: check.cpp  linalg.h  mat.cpp  vec.cpp
check_linalg/src/: main.cpp
check_linalg/src/stdx/float64/: matrix_op.cpp  nmf.cpp  svd.cpp  vector.cpp  vector_op.cpp
check_linalg/tests/: test_vec.cpp
check_log/: CMakeLists.txt  main.cpp
check_mathematica/: .gitignore  CMakeLists.txt  library.cpp  library.h
check_mathematica_llu/: CMakeLists.txt  CheckFunctionInDLL.nb  library.cpp  library.h
check_memory/: CMakeLists.txt  main.cpp
check_mkl/: CMakeLists.txt  main.cpp  main.h
check_multimethods/: .gitignore  CMakeLists.txt  main.cpp
check_number_system/: CMakeLists.txt  main.cpp
check_number_system/include/stdx/: numbers.h
check_number_system/src/stdx/: numbers.cpp
check_parallel_kernel/: CMakeLists.txt  README.txt  kernel.h  main.cpp
check_pfor/: CMakeLists.txt  README.TXT  main.cpp  parallel.h
check_rest/: CMakeLists.txt  README.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  syntax.txt
check_structures/: CMakeLists.txt  CheckStructure.nb  README_containers.txt  README_linalg.txt  TODO.txt  array.h  dot_op.h  list.h  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  matrix.h  matrix_op.h  octree.cpp  octree.h  refc.h  tensor.h  v3d.h  vector.h  vector_op.h
check_structures/_suspended/: array.h  data.csv  main1.cpp  main2.cpp  main3.cpp  main4.cpp  octree.h  refcount.h  tensor.h  transpose.h
check_structures/_suspended/linalg/: linalg_op.h  mat.cpp  vec.cpp
check_structures/_suspended/misc/: CMakeLists_linalg.txt  array_op.h
check_structures/include/stdx/: array.h  exceptions.h  language.h  options.h  tprint.h  tprintf.h
check_structures/include/stdx/float64/: arith.h  array.h  array_op.h  dot_op.h  linalg.h  matrix.h  matrix_factorization.h  matrix_op.h  nmf.h  vector.h  vector_op.h
check_structures/include/stdx/ref/: map.h
check_structures/linalg/: linalg.cpp  linalg.h  linalg_op.cpp  utils.cpp
check_structures/misc/: carithx.h  cmathx.h
check_structures/src/: main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  main_mkl.cpp  matrix8.cpp
check_structures/src/stdx/: options.cpp  tprint.cpp  tprintf.cpp
check_structures/src/stdx/float64/: array.cpp  array_op.cpp  dot_op.cpp  eigen.cpp  matrix.cpp  matrix_factorization.cpp  matrix_op.cpp  nmf.cpp  svd.cpp  transpose.cpp  vector.cpp  vector_op.cpp
check_structures/stdlib/: cmath  math.h  std_abs.h
check_structures/stdx/: arith.h  array.h  exceptions.h  language.h
check_structures/stdx/float64/: README.txt  array.cpp  array_op.cpp  array_op.h  dot_op.cpp  dot_op.h  matrix.cpp  matrix.h  matrix_op.cpp  matrix_op.h  transpose.cpp  transpose.h  vector.cpp  vector.h  vector_op.cpp  vector_op.h
check_structures/stdx/linalg/: dot_op.h  matrix.h  matrix_op.h  print_op.h  vector.h  vector_op.h
check_structures/stdx/linalgd/: README.txt
check_structures/stdx/linalgf/: README.txt
check_structures/tests/: test_float64.cpp  test_vec.cpp
check_tensor/: CMakeLists.txt  README.txt  TODO.txt  main.cpp
check_tensor/stdx/: tensor.cpp  tensor.h
(+454 files in other folders)
